@@ -1340,6 +1340,8 @@ code {
 
 <p><strong>powers_overlap_slots</strong> | <code>bool</code> | When true, the power icon is drawn on top of the empty slot graphic for any given slot. If false, the empty slot graphic will only be drawn if there's not a power in the slot. The default value is false.</p>
 
+<p><strong>enable_gamepad_nav</strong> | <code>bool</code> | When true, the actionbar can be interacted with via the next/prev/activate menu bindings. Defaults to true.</p>
+
 <hr />
 
 <h4>MenuActiveEffects</h4>
